Possible fix for MacOS Tor browser menu missalignment

--- a/css/Left.css
+++ b/css/Left.css
@@ -29,7 +29,7 @@
 .left .filter-clear { color: white; text-decoration: none; margin-left: -41px; opacity: 0.5; padding: 16px; }
 
 .SiteList { margin-bottom: 40px; }
-.SiteList .site { border-bottom: 1px solid #3D444B; position: relative }
+.SiteList .site { border-bottom: 1px solid #3D444B; position: relative; white-space: nowrap; }
 .SiteList .site.disabled:hover { background-color: rgba(173,136,183,0.04); }
 .SiteList .site.disabled .circle { opacity: 0.3 }
 .SiteList .site.disabled .inner { color: white; opacity: 0.3 }
